--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,11 +3,27 @@ project:
 
 website:
   title: "Health AI in R Workshop"
+  site-url: https://brookewolford.com/HealthAIinR
+  repo-url: https://github.com/bnwolford/HealthAIinR
+  repo-actions: [edit, issue]
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - icon: github
+        href: https://github.com/bnwolford/HealthAIinR
+        aria-label: GitHub repository
+  sidebar:
+    contents:
+      - section: "Lesson Modules"
+        contents: "modules/*"
+      - section: Activities
+        contents: "activities/*"
+      - section: Bonus
+        contents: "bonus/*"
+  page-footer:
+    center:
+      - LICENSE.md
 
 format:
   html:
@@ -19,5 +35,7 @@ format:
 
 execute:
   eval: false
+  echo: true
+  freeze: auto
 engine: knitr
 
